--- a/pages/about.html
+++ b/pages/about.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <header>
-            <a href="../pages/index.html">Главная</a>
+            <a href="pages/index.html">Главная</a>
             <a href="#">Обо мне</a>
-            <a href="../pages/contacts.html">Контакты</a>
+            <a href="pages/contacts.html">Контакты</a>
         </header>
         <hr>
         <main>
