--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <header>
-            <a href="pages/index.html">Главная</a>
-            <a href="pages/about.html">Обо мне</a>
+            <a href="../index.html">Главная</a>
+            <a href="about.html">Обо мне</a>
             <a href="#">Контакты</a>
         </header>
         <hr>
