edit notes in the code and minor edits

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,15 +1,14 @@
-<!-- Дата начала проекта: 20.03.2022.
+<!-- Дата начала проекта: 20.03.2022
 Учебный проект на примере сайта-визитки юриста.
-В настоящее время я работаю юристом, поэтому описание сайта решено сделать о себе с реальной информацией.
 Сайт проверен через Validator W3C и не имеет ошибок. -->
 <!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <title>Обо мне - Моя первая веб-страница</title>
+        <title>Обо мне</title>
     </head>
     <body>
-        <header>
+        <header> <!-- Основные страницы сайта и ссылки на них -->
             <a href="../index.html">Главная</a>
             <a href="#">Обо мне</a>
             <a href="contacts.html">Контакты</a>
@@ -68,7 +67,7 @@
         <hr>
         <footer>
             <span>
-                &copy;&nbsp;Alexey Sokolov<br>
+                &copy;&nbsp;Alexey Sokolov, 2022<br>
                 <!-- Включить или отключить контакты в подвале сайта -->
                 г. Москва, ул. Зои и Александра Космодемьянских, д. 26/21, стр. 1.<br>
                 +7 (903) 553-34-23<br>
