--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,15 +1,14 @@
-<!-- Дата начала проекта: 20.03.2022.
+<!-- Дата начала проекта: 20.03.2022
 Учебный проект на примере сайта-визитки юриста.
-В настоящее время я работаю юристом, поэтому описание сайта решено сделать о себе с реальной информацией.
 Сайт проверен через Validator W3C и не имеет ошибок. -->
 <!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <title>Контакты - Моя первая веб-страница</title>
+        <title>Контакты</title>
     </head>
     <body>
-        <header>
+        <header> <!-- Основные страницы сайта и ссылки на них -->
             <a href="../index.html">Главная</a>
             <a href="about.html">Обо мне</a>
             <a href="#">Контакты</a>
@@ -17,25 +16,25 @@
         <hr>
         <main>
             <h1>Мой офис</h1>
-            <!-- Любое подходящее описание -->
-            <address>
+            <address> <!-- Адрес с необходимым описанием -->
                 г. Москва, ул. Зои и Александра Космодемьянских, д. 26/21, стр. 1.<br>
                 <strong>+7 (903) 553-34-23</strong><br>
+                Прием в офисе только по предварительному согласованию.<br>
                 По телефону на связи ежедневно, включая выходные, с 10 до 23.<br>
             </address>
             <br>
             <!-- Вставка Яндекс Карты -->
             <!-- Отключено, так как Validator W3C показывает две ошибки:
-            Неверное значение trueатрибута allowfullscreenв элементе iframe.
-            frameborder атрибут iframe элемента устарел. Вместо этого используйте CSS.-->
+            Неверное значение trueатрибута allowfullscreen в элементе iframe.
+            frameborder атрибут iframe элемента устарел. Вместо этого используйте CSS. -->
             <!-- <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/?ll=37.517858%2C55.822397&utm_medium=mapframe&utm_source=maps&z=18.91" style="color:#eee;font-size:12px;position:absolute;top:14px;">Москва — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUBFMHVdD" width="760" height="500" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div> -->
             <br>
-            <img src="../images/map1.png" alt="Вход в здание" width="800" height="459" >
+            <img src="../images/map1.png" alt="Вход в здание" width="800" height="459" > <!-- Фото карты с расположением офиса -->
         </main>
         <hr>
         <footer>
             <span>
-                &copy;&nbsp;Alexey Sokolov<br>
+                &copy;&nbsp;Alexey Sokolov, 2022<br>
                 <!-- Включить или отключить контакты в подвале сайта -->
                 <!-- г. Москва, ул. Зои и Александра Космодемьянских, д. 26/21, стр. 1.<br>
                 +7 (903) 553-34-23<br> -->
