--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!-- Дата начала проекта: 20.03.2022.
+<!-- Дата начала проекта: 20.03.2022
 Учебный проект на примере сайта-визитки юриста.
-В настоящее время я работаю юристом, поэтому описание сайта решено сделать о себе с реальной информацией.
 Сайт проверен через Validator W3C и не имеет ошибок. -->
 <!DOCTYPE html>
 <html lang="ru">
@@ -9,14 +8,14 @@
         <title>Юрист - ведение дел в судах</title>
     </head>
     <body>
-        <header>
+        <header> <!-- Основные страницы сайта и ссылки на них -->
             <a href="#">Главная</a>
             <a href="pages/about.html">Обо мне</a>
             <a href="pages/contacts.html">Контакты</a>
         </header>
         <hr>
         <main>
-            <!-- Любое подходящее описание -->
+            <!-- Подходящее описание -->
             <h1>Юрист - ведение дел в судах</h1>
             <h2>Соколов Алексей Владимирович - судебный юрист</h2>
             <img src="images/sokolov.jpg" title="Алексей Соколов - судебный юрист" alt="Алексей Соколов - судебный юрист" width="260" height="281">
@@ -29,7 +28,7 @@
         <hr>
         <footer>
             <span>
-                &copy;&nbsp;Alexey Sokolov<br>
+                &copy;&nbsp;Alexey Sokolov, 2022<br>
                 <!-- Включить или отключить контакты в подвале сайта -->
                 <!-- г. Москва, ул. Зои и Александра Космодемьянских, д. 26/21, стр. 1.<br>
                 +7 (903) 553-34-23<br> -->
