--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -5,6 +5,7 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Контакты</title>
     </head>
     <body>
