--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Юрист - ведение дел в судах</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header> <!-- Основные страницы сайта и ссылки на них -->
