--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -13,6 +13,7 @@
             <a href="../index.html">Главная</a>
             <a href="about.html">Обо мне</a>
             <a href="#">Контакты</a>
+            <link rel="stylesheet" href="../css/style.css">
         </header>
         <hr>
         <main>
