--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- Подходящее описание -->
             <h1>Юрист - ведение дел в судах</h1>
             <h2>Соколов Алексей Владимирович - судебный юрист</h2>
-            <img src="images/sokolov.jpg" title="Алексей Соколов - судебный юрист" alt="Алексей Соколов - судебный юрист" width="260" height="281">
+            <img class="foto1" src="images/sokolov.jpg" title="Алексей Соколов - судебный юрист" alt="Алексей Соколов - судебный юрист" width="260" height="281">
             <p>Занимаюсь ведением дел в судах, защитой и представлением интересов граждан и организаций в судах и государственных органах Российской Федерации <em>(судебное представительство).</em></p>
             <p>Положительный опыт судебного представительства <strong>16 лет</strong>, ведения дел в судах во всех судебных инстанциях. На протяжении <em>этого времени</em>, успешно решаю юридические вопросы своих доверителей.</p>
             <p>Специализируюсь на особо сложных категориях гражданских судебных дел, делах по крупным искам, делах по спорам неимущественного характера.</p>
