style for photos in contacts

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -31,7 +31,7 @@
             frameborder атрибут iframe элемента устарел. Вместо этого используйте CSS. -->
             <!-- <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/?ll=37.517858%2C55.822397&utm_medium=mapframe&utm_source=maps&z=18.91" style="color:#eee;font-size:12px;position:absolute;top:14px;">Москва — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUBFMHVdD" width="760" height="500" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div> -->
             <br>
-            <img src="../images/map1.png" alt="Вход в здание" width="800" height="459" > <!-- Фото карты с расположением офиса -->
+            <img class="foto2" src="../images/map1.png" alt="Вход в здание" width="800" height="459" > <!-- Фото карты с расположением офиса -->
         </main>
         <hr>
         <footer>
