--- a/pages/about.html
+++ b/pages/about.html
@@ -27,16 +27,16 @@
             <h2>Юридическая помощь</h2>
             <h3>Семейные дела</h3>
             <ul>
-                <li><strong>Расторжение брака</strong>, в том числе, при наличии у супругов общих несовершеннолетних детей, при несогласии одного из супругов на расторжение брака;</li>
-                <li>Признание брака недействительным (со всеми вытекающими последствиями);</li>
-                <li><strong>Раздел имущества</strong>, нажитого совместно в период брака (раздел общего имущества супругов). Споры о разделе совместно нажитого недвижимого имущества;</li>
-                <li>Споры о признании недвижимого имущества личным имуществом каждого из супругов;</li>
-                <li>Споры об определении долей при разделе общего имущества супругов;</li>
-                <li><strong>Определение порядка общения с ребенком</strong> (детьми), как их родителей, так и других родственников;</li>
-                <li>Споры по усыновлению детей;</li>
-                <li>Установление и оспаривание отцовства, установление опекунства;</li>
-                <li>Установление места жительства ребенка (детей) при раздельном проживании супругов;</li>
-                <li>Лишение - ограничение родительских прав;</li>
+                <li><strong>Расторжение брака</strong>, в том числе, при наличии у супругов общих несовершеннолетних детей, при несогласии одного из супругов на расторжение брака.</li>
+                <li>Признание брака недействительным (со всеми вытекающими последствиями).</li>
+                <li><strong>Раздел имущества</strong>, нажитого совместно в период брака (раздел общего имущества супругов). Споры о разделе совместно нажитого недвижимого имущества.</li>
+                <li>Споры о признании недвижимого имущества личным имуществом каждого из супругов.</li>
+                <li>Споры об определении долей при разделе общего имущества супругов.</li>
+                <li><strong>Определение порядка общения с ребенком</strong> (детьми), как их родителей, так и других родственников.</li>
+                <li>Споры по усыновлению детей.</li>
+                <li>Установление и оспаривание отцовства, установление опекунства.</li>
+                <li>Установление места жительства ребенка (детей) при раздельном проживании супругов.</li>
+                <li>Лишение - ограничение родительских прав.</li>
                 <li><strong>Взыскание алиментов</strong> на содержание детей или нетрудоспособных родственников (родителей, супругов).</li>
             </ul>
             <h3>Наследственные дела</h3>
@@ -54,15 +54,15 @@
             </ul>
             <h3>Жилищные дела</h3>
             <ul>
-                <li>Снятие с регистрационного учета - выписать из квартиры;</li>
-                <li>Выселение из квартиры;</li>
-                <li>Признание права собственности на жилое помещение;</li>
-                <li>Признании недействительным договора купли-продажи, мены, дарения жилого помещения;</li>
-                <li>Ведение дел о возмещении ущерба причинённого заливом квартиры (некачественным ремонтом);</li>
-                <li>Дела о нечинении препятствий в пользовании жилым помещением;</li>
-                <li>Определение порядка пользования жилым помещением;</li>
-                <li>Истребование имущества из чужого незаконного владения;</li>
-                <li>Оспаривание преимущественного права покупки доли в праве долевой собственности;</li>
+                <li>Снятие с регистрационного учета - выписать из квартиры.</li>
+                <li>Выселение из квартиры.</li>
+                <li>Признание права собственности на жилое помещение.</li>
+                <li>Признании недействительным договора купли-продажи, мены, дарения жилого помещения.</li>
+                <li>Ведение дел о возмещении ущерба причинённого заливом квартиры (некачественным ремонтом).</li>
+                <li>Дела о нечинении препятствий в пользовании жилым помещением.</li>
+                <li>Определение порядка пользования жилым помещением.</li>
+                <li>Истребование имущества из чужого незаконного владения.</li>
+                <li>Оспаривание преимущественного права покупки доли в праве долевой собственности.</li>
                 <li>Признание права собственности на жилое помещение в порядке наследования.</li>
             </ul>
         </main>
